--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "mo-js": "^0.288.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-route": "^1.0.3",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "react-youtube": "^7.5.0",
     "youtube-embed-video": "^1.0.2"
